[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rltoolkit"
version = "1.0.0"
authors = [
  { name="Inaki Vazquez", email="ivazquez@deusto.es" },
]
description = "Basic general purpose tools for experimenting with Reinforcement Learning and Gymnasium environments."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/inakivazquez/rltoolkit"
Issues = "https://github.com/inakivazquez/rltoolkit/issues"